spec/e2e/pipeline/unmatched_args.lit
fn no_op {}
1 |> no_op() # error: [line 2] Runtime error: Expected 0 arguments but got 1.
